manifests/database.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - image: "postgres:12"
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          hostPath:
            path: /home/book/tmp/db/
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
