manifests/target-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: target-app
  template:
    metadata:
      labels:
        app: target-app
    spec:
      containers:
        - name: target
          image: target-server:test
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: target-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: target-app
